--- a/src/components/qrcodegen/qrcodegen.scss
+++ b/src/components/qrcodegen/qrcodegen.scss
@@ -4,8 +4,6 @@
   justify-content: start;
   align-items: center;
   background-image: linear-gradient(320deg, #0f0f0f 0%, #1d1d1d 100%);
-  box-shadow:  20px 20px 60px #000000,
-             -20px -20px 60px #151515;
   border-radius: 2rem;
   padding: 1rem 2rem 2rem 2rem;
   width: 50vw;
